# aldor

./: .gitignore  Anchor.toml  Cargo.toml  README.md  agentic.md  package-lock.json  package.json  tsconfig.json
agent/: package-lock.json  package.json  tsconfig.json
agent/src/: index.ts
client/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
client/app/: globals.css  layout.tsx
client/components/: ClientOnly.tsx  PlatformFlowDiagram.tsx  QVACIntegration.tsx  SNSIntegration.tsx  WalletContextProvider.tsx  WalletPaymentModal.tsx
client/lib/: api.ts  types.ts  useWalletPaymentQueue.ts  utils.ts  walletSigner.ts
contracts/: agent-registry.clar
docs/: grant-proposal.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: _old_page.tsx  globals.css  layout.tsx  page.tsx
frontend/components/: AgentChat.tsx  AldorLogo.tsx  CovalentDataPanel.tsx  EconomyGraph.tsx  ExecutionSteps.tsx  Header.tsx  IntegrationsStatus.tsx  NetworkSwitcher.tsx  PageHeader.tsx  ProtocolTrace.tsx  StatusBadges.tsx  ToolCatalog.tsx  TransactionLog.tsx  UmbraPrivacyProof.tsx  WalletContextProvider.tsx  WalletInfo.tsx  WalletPaymentModal.tsx
frontend/lib/: NetworkContext.tsx  api.ts  types.ts  useWalletPayments.ts  walletSigner.ts
programs/aldor/: Cargo.toml
programs/aldor/src/: lib.rs
sdk/: package-lock.json  package.json  tsconfig.json
sdk/src/: aldorIdl.ts  dodo.ts  index.d.ts  index.js  index.ts  interceptor.d.ts  palmUsd.d.ts  (+15 more)
tests/: phase1.ts
working demo/: demo.md
(+75 files in other folders)
