[package]
name = "aldor"
version = "0.1.0"
description = "Aldor agent economy program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "aldor"

[features]
no-entrypoint = []
no-idl = []
cpi = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
